Added picture to text app.

--- a/web_app/templates/piano/index.html
+++ b/web_app/templates/piano/index.html
@@ -16,15 +16,8 @@
 
     <meta charset="UTF-8">
     <meta name="description"
-          content="Play with an electronic piano keyboard made with Javascript. Dynamically generated audio creates a realistic playing experience."/>
-    <meta name="author" content="Joe Liang"/>
+          content="Practice identifying note names and piano keys for notes on a music staff."/>
 
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:description"
-          content="Play with an electronic piano keyboard made with Javascript. Dynamically generated audio creates a realistic playing experience."/>
-    <meta name="twitter:title" content="Javascript Piano Keyboard"/>
-    <meta name="twitter:image"
-          content="https://i1.wp.com/1000mileworld.com/wp-content/uploads/2019/09/twitterCard-piano.jpg"/>
 
     {% block title %}
         <title>Piano Note Quiz</title>
