Fixed letter spacing.

--- a/front_end/templates/front_end/letters.html
+++ b/front_end/templates/front_end/letters.html
@@ -9,7 +9,7 @@
             {% elif letter in narrow_list %}
 
                 {% if upper %}
-                    <div class="coly">
+                    <div class="coly" style="letter-spacing: {{letter_spacing}}px">
                         <img src="{{ letter }}" style="width: {{ special_width }}px; height: {{ upper_height }}px">
                     </div>
                 {% else %}
