Updated letters and reverted code back to earlier version.

--- a/front_end/static/front_end/style.css
+++ b/front_end/static/front_end/style.css
@@ -1,15 +1,12 @@
-img {
-    display: block;
-    margin-right: -5px;
+img{
+    margin-right: -8px;
 }
-
-.coly {
-    display: flex;
-    align-items: baseline; /* Align items to the baseline */
-}
-
-
-
-/* .letter-container {
-    display: flex;
-} */
+    
+    .upper{
+        width: 20px;
+        height: 20px
+    }
+    
+    .space{
+        margin-right: 5px;
+    }
