Added distance input field.

--- a/front_end/static/front_end/style.css
+++ b/front_end/static/front_end/style.css
@@ -1,12 +1,12 @@
-img{
-    margin-right: 0px;
+/* img{
+    margin-right: -5px;
 }
     
-    .upper{
-        width: 20px;
-        height: 20px
-    }
-    
-    .space{
-        margin-right: 5px;
-    }
+.upper{
+    width: 20px;
+    height: 20px
+}
+
+.space{
+    margin-right: 5px;
+} */
