--- a/front_end/templates/front_end/index.html
+++ b/front_end/templates/front_end/index.html
@@ -13,6 +13,8 @@
                 <input type="number" min="0" name="lower_height" value="40" id="lower_height" class="form-control">
                 <label for="lower_width">Lower Case Width</label>
                 <input type="number" min="0" name="lower_width" value="32" id="lower_width" class="form-control">
+                <label for="distance">Distance</label>
+                <input type="number"  name="distance" value="0" id="distance" class="form-control">
             </div>
             <hr>
             <label for="text_input">Text:</label>
